# ChangeLog for dev-libs/libsigc++
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libsigc++/ChangeLog,v 1.116 2008/04/20 22:51:16 dirtyepic Exp $

  20 Apr 2008; Ryan Hill <dirtyepic@gentoo.org>
  +files/libsigc++-1.0.4-gcc43.patch, libsigc++-1.0.4-r3.ebuild:
  Add GCC 4.3 patch from Debian. Reported by Peter Alfredsen in bug
  #218395.

*libsigc++-2.2.2 (28 Mar 2008)

  28 Mar 2008; Rémi Cardona <remi@gentoo.org> +libsigc++-2.2.2.ebuild:
  Bump to 2.2.2

  27 Nov 2007; Jeroen Roovers <jer@gentoo.org> libsigc++-2.0.18.ebuild:
  Stable for HPPA (bug #199322).

  20 Nov 2007; Markus Rothe <corsair@gentoo.org> libsigc++-2.0.18.ebuild:
  Stable on ppc64; bug #199322

  17 Nov 2007; Raúl Porcel <armin76@gentoo.org> libsigc++-2.0.18.ebuild:
  alpha/ia64/sparc stable wrt #199322

  17 Nov 2007; nixnut <nixnut@gentoo.org> libsigc++-2.0.18.ebuild:
  Stable on ppc wrt bug 199322

  17 Nov 2007; Dawid Węgliński <cla@gentoo.org> libsigc++-2.0.18.ebuild:
  Stable on x86 (bug #199322)

  16 Nov 2007; Samuli Suominen <drac@gentoo.org> libsigc++-2.0.18.ebuild:
  amd64 stable wrt #199322

  26 Oct 2007; Daniel Gryniewicz <dang@gentoo.org>
  libsigc++-1.0.4-r2.ebuild, libsigc++-1.0.4-r3.ebuild,
  libsigc++-1.2.5.ebuild, libsigc++-2.0.17.ebuild, libsigc++-2.0.18.ebuild:
  Fix typos in ewarns; bug #197105

  14 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org>
  libsigc++-1.0.4-r3.ebuild:
  fix QA warnings

*libsigc++-2.0.18 (14 Oct 2007)

  14 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +libsigc++-2.0.18.ebuild:
  bump to 2.0.18

  27 Sep 2007; Mart Raudsepp <leio@gentoo.org> -libsigc++-2.0.11.ebuild,
  -libsigc++-2.0.14.ebuild, -libsigc++-2.0.15.ebuild,
  -libsigc++-2.0.16.ebuild:
  Remove old

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> libsigc++-2.0.17.ebuild:
  Stable on ppc64

  07 Apr 2007; Petteri Räty <betelgeuse@gentoo.org>
  -libsigc++-2.0.5.ebuild: