@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libsigc++
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libsigc++/ChangeLog,v 1.116 2008/04/20 22:51:16 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libsigc++/ChangeLog,v 1.117 2008/05/21 13:46:37 remi Exp $
+
+*libsigc++-1.2.7 (21 May 2008)
+
+  21 May 2008; Rémi Cardona <remi@gentoo.org> +libsigc++-1.2.7.ebuild:
+  Bump to slot 1.2 to 1.2.7, rework ebuild completely and fix bug #219041 in
+  the process
 
   20 Apr 2008; Ryan Hill <dirtyepic@gentoo.org>
   +files/libsigc++-1.0.4-gcc43.patch, libsigc++-1.0.4-r3.ebuild:
